@@ -10,38 +10,44 @@ make test TEST_VERBOSE=1
 
 bugs
 
+  * disable module build (EMBEDMYALLOC)
+  * turn -1 into undef and vice versa.
+  * not calling unload -> coredump
   * $Config{cc} might not understand Gimps CFLAGS (-mpentium).
-  * do NOT modinstall with older gimp versions (!!!!!!!!!)
-[DONE]  * make parasiterc ascii-only !!!!
+[DONE]  * do NOT modinstall with older gimp versions (!!!!!!!!!)
   * improve examples/example-*.pl
-  * install in /usr/local (???? why? more options??)
-  * install even without Gtk? NO!
-[KILL]  * perl_fu_webify in homepage-logo.pl
+[KILL]  * install in /usr/local (???? why? more options??)
+[DONE]  * install even without Gtk? NO!
   * wait for working gimp_file_load (or do it myself?)
   * get rid of xs_exit. please please fuck me plenty.
-  * do not install scm2scm and scm2perl on 56.004
+[KILL]  * do not install scm2scm and scm2perl on 56.004
   * create gimpstyle.pod
+  * get rid of ':auto'
   
 important issues
 
+  * pdb_proc_renameto
+  * gimp_progress_init (1 & 2 args)
+  * gimp_default_display (...) for libgimp
+  * Gimp::Module for modules (!)
+  * gimp_progress_close
+  * PerlCC configurable options for Perl-Server startup, Gipm_host etc.
+  * implement CALLBACKS via the Perl-Server
   * PF_COORDS (just as Light Effects/FlareFX)
   * PF_PREVIEW(!)
-[PF_FILE]  * PF_FILE
-  * --use-interp=perl|script-fu
+[DONE]  * --use-interp=perl|script-fu
   * change set_usize to something else..
   * Gimp::IO (?)
   * Gimp::Fu import after Gimp? use Gimp::main for Gimp::Fu??
-  * generic config query mechanism
+[DONE]  * generic config query mechanism
   * install scripts in share/
-  * register dummy function to calm gimp down
-  * config options & paths in module(!)
-  * Gimp::Module for modules (!)
+  * register dummy function to calm gimp down (really??)
+[DONE]  * config options & paths in module(!)
   * gimp->object_id, drawable_object_id remove!
-  * gimp_display_image
   * vamp up homepage
   * --ui and --noui for Gimp::Fu
   * Gimp::ping
-  * clean up PKG_ANY vs. PKG_REAL_DRAWABLE
+[KILL]  * clean up PKG_ANY vs. PKG_REAL_DRAWABLE
   * allow plug-ins to register with only a drawable argument(!)
     (fix this in Gimp)
   * gradient button
